--- a/proj.win32/BestBurger.vcxproj
+++ b/proj.win32/BestBurger.vcxproj
@@ -256,14 +256,20 @@ xcopy /Y /Q "$(EngineRoot)external\websockets\prebuilt\win32\*.*" "$(OutDir)"</C
     <ClCompile Include="..\Classes\AppDelegate.cpp" />
     <ClCompile Include="..\Classes\DBManager.cpp" />
     <ClCompile Include="..\Classes\HelloWorldScene.cpp" />
+    <ClCompile Include="..\Classes\IngerdientLayer.cpp" />
+    <ClCompile Include="..\Classes\SauceLayer.cpp" />
     <ClCompile Include="..\Classes\SelectPreferenceScene.cpp" />
+    <ClCompile Include="..\Classes\TasteLayer.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Classes\AppDelegate.h" />
     <ClInclude Include="..\Classes\DBManager.h" />
     <ClInclude Include="..\Classes\HelloWorldScene.h" />
+    <ClInclude Include="..\Classes\IngerdientLayer.h" />
+    <ClInclude Include="..\Classes\SauceLayer.h" />
     <ClInclude Include="..\Classes\SelectPreferenceScene.h" />
+    <ClInclude Include="..\Classes\TasteLayer.h" />
     <ClInclude Include="main.h" />
   </ItemGroup>
   <ItemGroup>
