--- a/proj.win32/BestBurger.vcxproj
+++ b/proj.win32/BestBurger.vcxproj
@@ -254,9 +254,12 @@ xcopy /Y /Q "$(EngineRoot)external\websockets\prebuilt\win32\*.*" "$(OutDir)"</C
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\Classes\AppDelegate.cpp" />
+    <ClCompile Include="..\Classes\ConvertUTF.cpp" />
     <ClCompile Include="..\Classes\DBManager.cpp" />
     <ClCompile Include="..\Classes\HelloWorldScene.cpp" />
     <ClCompile Include="..\Classes\IngerdientLayer.cpp" />
+    <ClCompile Include="..\Classes\InputBox.cpp" />
+    <ClCompile Include="..\Classes\LoginScene.cpp" />
     <ClCompile Include="..\Classes\SauceLayer.cpp" />
     <ClCompile Include="..\Classes\SelectPreferenceScene.cpp" />
     <ClCompile Include="..\Classes\TasteLayer.cpp" />
@@ -264,9 +267,12 @@ xcopy /Y /Q "$(EngineRoot)external\websockets\prebuilt\win32\*.*" "$(OutDir)"</C
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Classes\AppDelegate.h" />
+    <ClInclude Include="..\Classes\ConvertUTF.h" />
     <ClInclude Include="..\Classes\DBManager.h" />
     <ClInclude Include="..\Classes\HelloWorldScene.h" />
     <ClInclude Include="..\Classes\IngerdientLayer.h" />
+    <ClInclude Include="..\Classes\InputBox.h" />
+    <ClInclude Include="..\Classes\LoginScene.h" />
     <ClInclude Include="..\Classes\SauceLayer.h" />
     <ClInclude Include="..\Classes\SelectPreferenceScene.h" />
     <ClInclude Include="..\Classes\TasteLayer.h" />
