--- a/proj.win32/BestBurger.vcxproj.filters
+++ b/proj.win32/BestBurger.vcxproj.filters
@@ -44,6 +44,9 @@
     <ClCompile Include="..\Classes\ConvertUTF.cpp">
       <Filter>win32</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\SelectBurgerScene.cpp">
+      <Filter>win32</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -73,6 +76,9 @@
       <Filter>win32</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\ConvertUTF.h">
+      <Filter>win32</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\SelectBurgerScene.h">
       <Filter>win32</Filter>
     </ClInclude>
   </ItemGroup>
