--- a/proj.win32/BestBurger.vcxproj
+++ b/proj.win32/BestBurger.vcxproj
@@ -254,9 +254,9 @@ xcopy /Y /Q "$(EngineRoot)external\websockets\prebuilt\win32\*.*" "$(OutDir)"</C
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\Classes\AppDelegate.cpp" />
+    <ClCompile Include="..\Classes\BurgerInfoLayer.cpp" />
     <ClCompile Include="..\Classes\ConvertUTF.cpp" />
     <ClCompile Include="..\Classes\DBManager.cpp" />
-    <ClCompile Include="..\Classes\HelloWorldScene.cpp" />
     <ClCompile Include="..\Classes\IngerdientLayer.cpp" />
     <ClCompile Include="..\Classes\InputBox.cpp" />
     <ClCompile Include="..\Classes\LoginScene.cpp" />
@@ -268,9 +268,9 @@ xcopy /Y /Q "$(EngineRoot)external\websockets\prebuilt\win32\*.*" "$(OutDir)"</C
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Classes\AppDelegate.h" />
+    <ClInclude Include="..\Classes\BurgerInfoLayer.h" />
     <ClInclude Include="..\Classes\ConvertUTF.h" />
     <ClInclude Include="..\Classes\DBManager.h" />
-    <ClInclude Include="..\Classes\HelloWorldScene.h" />
     <ClInclude Include="..\Classes\IngerdientLayer.h" />
     <ClInclude Include="..\Classes\InputBox.h" />
     <ClInclude Include="..\Classes\LoginScene.h" />
